# sirfz

./: .gitignore  Makefile  README.md
hypervisor/: Cargo.toml  setup_caps.sh
hypervisor/src/: main.rs  shutdown.rs
hypervisor/src/chat/: mod.rs  recv_loop.rs  router.rs  send_loop.rs  terminal.rs
hypervisor/src/crypto/: cipher.rs  ephemeral.rs  kdf.rs  mod.rs  ratchet.rs
hypervisor/src/ffi/: loader.rs  mod.rs  ops.rs  transport.rs  types.rs
hypervisor/src/hardening/: anti_debug.rs  dump.rs  input.rs  memory.rs  mod.rs  namespace.rs  seccomp.rs  signals.rs  watchdog.rs
hypervisor/src/secrets/: secret.rs
transport/: go.mod
transport/clib/: export.go  handles.go  node.go
transport/cmd/join/: main.go
transport/cmd/server/: main.go
transport/internal/auth/: dialer.go  handshake.go  identity.go  tls.go
transport/internal/transport/: relay.go
transport/internal/tunnel/: arena.go  session.go
