[package]
name = "sirfz"
version = "1.0.0"
edition = "2021"

[dependencies]
libc = "0.2"
libseccomp = "0.3.0"
signal-hook = "0.3"
zeroize = { version = "1.8", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }
lazy_static = "1.4"
obfstr = "0.4"
subtle = "2.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
libloading = "0.8"

[[bin]]
name = "sirfz"
path = "src/main.rs"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
strip = "symbols"
overflow-checks = true
opt-level = "z"
